Mastered Flex Box

--- a/templates/header.html
+++ b/templates/header.html
@@ -1,19 +1,14 @@
 <!-- Header Logo, Title, Short Description -->
-<div class="flex justify-stretch mb-0 pb-3 border-gray-500 border-b-2">
-  <div class="p-0 ml-1 flex basis-1/4">
+<div class="flex justify-between p-1 border-gray-500 border-b-2">
+  <div class="p-0 m-0">
     <img
-      class="w-12 ml-1"
+      class="w-12 m-1 p-0"
       src="https://www.barclays.co.uk/content/dam/icons/favicons/barclays/Eagle_RGB_Cyan_Large.svg"
-      alt="Image"
-    />
-    <img
-      class="w-7/12 ml-2"
-      src="https://www.barclays.co.uk/content/dam/icons/favicons/barclays/Wordmark_RGB_Cyan_Large.svg"
-      alt="Image"
+      alt="Logo"
     />
   </div>
-  <div class="basis-1/2 text-center text-5xl italic">Alt-Era</div>
-  <div class="basis-1/4 text-right m-0 p-0 mr-1">
+  <div class="text-center text-5xl italic">Alt-Era</div>
+  <div class="text-right m-2">
     <p>
       BUK Chatbot <br />
       Toolset
