--- a/templates/playground.html
+++ b/templates/playground.html
@@ -1,3 +1,3 @@
-<div>
-  <div id="playground">Hi</div>
+<div class="flex flex-grow">
+  <div id="playground" class="flex flex-grow">Hi</div>
 </div>
